--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Whatever you want like whatever and save it
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dangerous Website</title>
+</head>
+<body>
+
+<img src="EpicClipArt.jpg" width= "300" align=left>
+
+<h1>This is a certified hood classic</h1>
+<h2>BRUH BRUH BRUH BRUH BRUH BRUH BRUH</h2>
+<p>Ay yo, the pizza here:</p>
+<ul>
+    <li><a target="_blank" href="http://Loki327.itch.io">Here's my itchy page</a></li>
+    <li><a target="_blank" href="https://vrv.co/watch/GYX0MG87R/One-Piece:A-Nightmare-The-Tragic-Night-of-Dressrosa">You should watch some One Piece</a></li>
+    <li><a target="_blank" href="https://animemotivation.com/types-of-anime-fans/"><img src= "SeriousLuffy.webp" width = "120"></a></li>
+</ul>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PS1PZxrwv2Q" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</body>
+</html>
