Commiting the final code
Ha ha!

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dangerous Website</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
+
 <body>
 
-<img src="EpicClipArt.jpg" width= "300" align=left>
+    <div>
+
+<img src="EpicClipArt.jpg" width= "300">
 
 <h1>This is a certified hood classic</h1>
 <h2>BRUH BRUH BRUH BRUH BRUH BRUH BRUH</h2>
@@ -19,6 +25,8 @@
 </ul>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PS1PZxrwv2Q" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</div>
 
 </body>
 </html>
