--- a/Who's That Pokeman/index.html
+++ b/Who's That Pokeman/index.html
@@ -13,8 +13,8 @@
     <div id = "game">
     <div id = "score_and_timer" class = "blade">
 
-        <div id = "score">69</div>
-        <div id = "timer">4:20</div>
+        <div id = "score">0</div>
+        <div id = "timer">60</div>
 
     </div>
 
@@ -23,7 +23,7 @@
             <img id = "pokemon-image" src = "">
             <div id = "pokemon-name">PIKACHU</div>
         </div>
-        <div id = "game-over">You ran out of time! You gave 1000 Pokedollars to the winner. You blacked out...</div>
+        <div id = "game-over">TIME'S UP!!!</div>
     </div>
 
     <div id = "controls" class = "blade">
@@ -36,10 +36,15 @@
             <input type = "text" id = "guess" autocomplete="off">
             <button id = "submit_guess" type = "submit">Guess</button>
             </form>
+            <button id = "restart">Restart</button>
         </div>
+
+        
 
     </div>
     </div>
+
+    <div id = "message"></div>
 
     <script src = "main.js"></script>
 </body>
